# QTS

./: .gitignore  README.md  agent.md  main.py  pyproject.toml  qts.config.json
artifacts/backtest/: pnl.csv  report.csv  run.txt  signals.csv
artifacts/close_report/: report.csv  run.txt  signals.csv
artifacts/stock_selection/: report.csv  run.txt  signals.csv
configs/: README.md  backtest.json  backtest.yaml  close_report.json  close_report.yaml  qts.config.json  qts.yaml  stock_selection.json  stock_selection.yaml
doc/: README.md  note.md  qts-files.md
lab/: README.md  __init__.py  records.md
lab/00-数据源连通性/: record.md  run.py
lab/01-增量更新/: record.md  run.py
lab/02-失败恢复/: record.md  run.py
lab/03-标准化/: record.md  run.py
lab/04-质量校验/: record.md  run.py
lab/05-数据源可达性/: record.md  run.py
lab/06-接口对照/: record.md  run.py
lab/07-直连采集/: record.md  run.py
lab/08-最小策略闭环/: record.md  run.py
lab/09-回测引擎闭环/: record.md  run.py
lab/10-交易成本闭环/: record.md  run.py
lab/11-组合构建闭环/: record.md  run.py
lab/12-风险指标闭环/: record.md  run.py
lab/13-调仓执行闭环/: record.md  run.py
lab/14-滑点模型闭环/: record.md  run.py
qts/: __init__.py  allocation.py  cli.py  config.py  data_source.py  diagnostics.py  engine.py  entrypoints.py  execution.py  models.py  optimization.py  paths.py  pipeline.py  presets.py  report.py  reporter.py  resilience.py  results.py  specs.py  strategy.py
scripts/: _bootstrap.py  _entry_common.py  backtest.py  close.py  close_report.py  stock_selection.py
tests/: conftest.py  test_plugins.py  test_properties.py  test_qts_regression.py
(+218 files in other folders)
