[project]
name = "qts"
version = "0.1.0"
description = "Extensible multi-decision quant system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.54",
    "hydra-core>=1.3.2",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandera>=0.25.0",
    "pydantic>=2.11.7",
    "pyarrow>=19.0.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
